# greentic-dwbase

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.toml
.codex/: PR-01.md  PR-02.md  PR-03.md  PR-04.md  PR-05.md  PR-06.md  PR-07.md  PR-08.md  PR-09.md  PR-10.md  PR-11.md  PR-12.md  PR-13.md  PR-14.md  PR-15.md  PR-16.md  PR-17.md  PR-18.md  PR-19.md  PR-20.md  PR-21.md  PR-22.md  PR-23.md  PR-24.md  PR-25.md  PR-26.md  PR-27.md  PR-28.md  PR-29.md  PR-30.md  PR-31.md  PR-32.md  PR-33.md  PR-34.md  PR-35.md  PR-36.md  PR-37.md  PR-38.md  PR-39.md  PR-40.md  (+12 more)
.github/workflows/: ci.yml  publish.yml  release.yml
ci/: local_check.sh  publish-crates.sh
crates/component-dwbase/: Cargo.toml  component.manifest.json
crates/component-dwbase/dwbase-data/: atoms.json
crates/component-dwbase/examples/: memory_demo.rs
crates/component-dwbase/src/: lib.rs
crates/dwbase-bench/: Cargo.toml
crates/dwbase-bench/benches/: engine.rs
crates/dwbase-bench/tests/: perf.rs
crates/dwbase-cli/: Cargo.toml
crates/dwbase-cli/src/: main.rs
crates/dwbase-core/: Cargo.toml
crates/dwbase-core/src/: lib.rs
crates/dwbase-embedder-dummy/: Cargo.toml
crates/dwbase-embedder-dummy/src/: lib.rs
crates/dwbase-engine/: Cargo.toml
crates/dwbase-engine/src/: lib.rs
crates/dwbase-metrics/: Cargo.toml
crates/dwbase-metrics/src/: lib.rs
crates/dwbase-node/: Cargo.toml  README.md
crates/dwbase-node/src/: main.rs
crates/dwbase-pack-runner/: Cargo.toml
crates/dwbase-pack-runner/src/: main.rs
crates/dwbase-pack-runner/tests/: dwbase_memory_pack.rs
crates/dwbase-security/: Cargo.toml
crates/dwbase-security/src/: lib.rs
crates/dwbase-storage-sled/: Cargo.toml
crates/dwbase-storage-sled/src/: lib.rs
crates/dwbase-stream-local/: Cargo.toml
crates/dwbase-stream-local/src/: lib.rs
crates/dwbase-swarm/: Cargo.toml
crates/dwbase-swarm-nats/: Cargo.toml
crates/dwbase-swarm-nats/src/: lib.rs  replication.rs  swarm.rs  world_events.rs
crates/dwbase-swarm/src/: lib.rs
crates/dwbase-vector-hnsw/: Cargo.toml
crates/dwbase-vector-hnsw/src/: lib.rs
crates/dwbase-wit-guest/: Cargo.toml
crates/dwbase-wit-guest/src/: lib.rs
crates/dwbase-wit-guest/wit/: dwbase-types.wit
crates/dwbase-wit-host/: Cargo.toml
crates/dwbase-wit-host/src/: lib.rs
crates/dwbase-wit-host/wit/: dwbase-core.wit
demo/: demo.sh  local.toml
deploy/: devnet.toml  edge.toml  local.toml
deploy/k8s/: configmap.yaml  service.yaml  statefulset.yaml
docs/: architecture.md  cli.md  component-dwbase.md  deployment.md  overview.md  performance.md  production.md  roadmap.md  wit.md
docs/developer/: architecture.md  ci.md  engine.md  publish.md  security.md  storage.md  vector.md  wit.md
dwbase-data/: atoms.json
examples/basic_memory/: README.md
examples/observe_stream/: Cargo.toml  README.md
examples/observe_stream/src/: main.rs
examples/replay_simulation/: README.md
examples/wasm-worker/: Cargo.toml  README.md
examples/wasm-worker/src/: lib.rs
examples/worlds_and_forks/: README.md
packs/dwbase-gtpack/: .gitignore  pack.yaml
packs/dwbase-gtpack/flows/: main.ygtc
packs/dwbase-memory/: .gitignore  README.md  build.sh  pack.json  run.sh
packs/dwbase-memory/config/: default.env
packs/dwbase-memory/flows/: memory_demo.json
tools/: check_schema_sync.py  publish_components_oci.sh
