[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1.0.214", features = ["derive"] }
bincode = { version = "1.3.3", default-features = false }
rmp-serde = { version = "1.3.0", default-features = false }
serde_json = "1.0.132"
thiserror = "1.0.63"
time = { version = "0.3.36", default-features = false, features = ["formatting", "parsing"] }
hnsw_rs = "0.3.3"
rand = "0.8.5"
num_cpus = "1.16.0"
wit-parser = "0.243.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
metrics = "0.22.4"
