[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.2"
authors = ["Greentic AI"]
description = "DWBase: agent-first immutable atom store, components, and tools."
homepage = "https://github.com/greentic-ai/greentic-dwbase"
documentation = "https://github.com/greentic-ai/greentic-dwbase"
repository = "https://github.com/greentic-ai/greentic-dwbase"
readme = "README.md"
keywords = ["agents", "memory", "vector", "wasm", "database"]
categories = ["database-implementations", "wasm", "command-line-utilities"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", default-features = false, features = ["serde", "alloc"] }
rmp-serde = { version = "1", default-features = false }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", default-features = false, features = ["formatting", "parsing"] }
hnsw_rs = "0.3"
rand = "0.9"
num_cpus = "1"
wit-parser = "0.243"
tracing = "0.1"
tracing-subscriber = "0.3"
metrics = "0.24"
anyhow = "1"
clap = "4"
reqwest = "0.12"
axum = "0.8"
toml = "0.9"
fs2 = "0.4"
metrics-exporter-prometheus = { version = "0.18", default-features = false }
uuid = "1"
ctrlc = "3"
zstd = "0.13"
tar = "0.4"
humantime = "2"
walkdir = "2"
async-trait = "0.1"
futures = "0.3"
parking_lot = "0.12"
once_cell = "1"
hex = "0.4"
crc32fast = "1"
sha2 = "0.10"
aes-gcm = "0.10"
rand_chacha = "0.9"
indexmap = "2"
sled = "0.34"
criterion = { version = "0.8", features = ["async_tokio"] }
wit-bindgen = "0.49"
async-nats = { version = "0.45", default-features = false, features = ["ring"] }
siphasher = "1"
tempfile = "3"
tokio = { version = "1", default-features = false }

dwbase-core = { path = "crates/dwbase-core", version = "0.1" }
dwbase-engine = { path = "crates/dwbase-engine", version = "0.1" }
dwbase-metrics = { path = "crates/dwbase-metrics", version = "0.1" }
dwbase-storage-sled = { path = "crates/dwbase-storage-sled", version = "0.1" }
dwbase-vector-hnsw = { path = "crates/dwbase-vector-hnsw", version = "0.1" }
dwbase-stream-local = { path = "crates/dwbase-stream-local", version = "0.1" }
dwbase-security = { path = "crates/dwbase-security", version = "0.1" }
dwbase-embedder-dummy = { path = "crates/dwbase-embedder-dummy", version = "0.1" }
dwbase-swarm = { path = "crates/dwbase-swarm", version = "0.1" }
dwbase-swarm-nats = { path = "crates/dwbase-swarm-nats", version = "0.1" }
dwbase-cli = { path = "crates/dwbase-cli", version = "0.1" }
dwbase-node = { path = "crates/dwbase-node", version = "0.1" }
dwbase-wit-host = { path = "crates/dwbase-wit-host", version = "0.1" }
dwbase-wit-guest = { path = "crates/dwbase-wit-guest", version = "0.1" }
dwbase-bench = { path = "crates/dwbase-bench", version = "0.1" }
component-dwbase = { path = "crates/component-dwbase", version = "0.1" }
dwbase-pack-runner = { path = "crates/dwbase-pack-runner", version = "0.1" }
