[package]
name = "component-dwbase"
edition.workspace = true
license.workspace = true
version.workspace = true

description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
[features]
default = []
component-wasm = []
nats = ["dwbase-swarm-nats/nats"]

[lib]
crate-type = ["rlib"]

[dependencies]
dwbase-core = { workspace = true }
dwbase-engine = { workspace = true }
dwbase-security = { workspace = true }
dwbase-embedder-dummy = { workspace = true }
dwbase-swarm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
time.workspace = true
once_cell.workspace = true
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true, default-features = false }
wit-bindgen.workspace = true
futures = { workspace = true }
dwbase-swarm-nats = { workspace = true }
parking_lot.workspace = true
dwbase-metrics = { workspace = true }
hex.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fs2.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[example]]
name = "memory_demo"
