[package]
name = "component-dwbase"
edition.workspace = true
license.workspace = true
version.workspace = true

description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
[features]
default = []
component-wasm = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
greentic-interfaces-guest = { version = "0.4.65", default-features = false, features = ["component-node"] }

[dev-dependencies]
tempfile.workspace = true
[[example]]
name = "memory_demo"
