[package]
name = "dwbase-bench"
edition.workspace = true
license.workspace = true
version.workspace = true

description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
[dependencies]
anyhow.workspace = true
criterion.workspace = true
dwbase-core = { workspace = true }
dwbase-engine = { workspace = true, features = ["tokio"] }
dwbase-security = { workspace = true }
dwbase-storage-sled = { workspace = true }
dwbase-stream-local = { workspace = true }
dwbase-vector-hnsw = { workspace = true }
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[[bench]]
name = "engine"
harness = false
