[package]
name = "dwbase-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "dwbase"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "https://github.com/agentic/greentic-dwbase/releases/download/v{ version }/dwbase-{ version }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "."
bin = ["dwbase"]

[[package.metadata.binstall.pkg]]
target = "x86_64-pc-windows-msvc"
pkg-url = "https://github.com/agentic/greentic-dwbase/releases/download/v{ version }/dwbase-{ version }-{ target }.zip"
pkg-fmt = "zip"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.16", features = ["derive"] }
dwbase-core = { path = "../dwbase-core" }
dwbase-engine = { path = "../dwbase-engine" }
dwbase-security = { path = "../dwbase-security" }
dwbase-embedder-dummy = { path = "../dwbase-embedder-dummy" }
dwbase-vector-hnsw = { path = "../dwbase-vector-hnsw" }
dwbase-stream-local = { path = "../dwbase-stream-local" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.8", features = ["json"] }
ctrlc = "3.4.4"
toml = "0.8.19"
dwbase-storage-sled = { path = "../dwbase-storage-sled" }
tar = "0.4.41"
zstd = "0.12.4"
time.workspace = true
tempfile = "3.12.0"
humantime = "2.1.0"
walkdir = "2.5.0"
sled = "0.34.7"
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
