[package]
name = "dwbase-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
[[bin]]
name = "dwbase"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "https://github.com/greentic-ai/greentic-dwbase/releases/download/v{ version }/dwbase-{ version }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "."
bin = ["dwbase"]

[[package.metadata.binstall.pkg]]
target = "x86_64-pc-windows-msvc"
pkg-url = "https://github.com/greentic-ai/greentic-dwbase/releases/download/v{ version }/dwbase-{ version }-{ target }.zip"
pkg-fmt = "zip"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
dwbase-core = { workspace = true }
dwbase-engine = { workspace = true }
dwbase-security = { workspace = true }
dwbase-embedder-dummy = { workspace = true }
dwbase-vector-hnsw = { workspace = true }
dwbase-stream-local = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
reqwest = { workspace = true, features = ["json"] }
ctrlc.workspace = true
toml.workspace = true
dwbase-storage-sled = { workspace = true }
tar.workspace = true
zstd.workspace = true
time.workspace = true
tempfile.workspace = true
humantime.workspace = true
walkdir.workspace = true
sled.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
