[package]
name = "dwbase-engine"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
tokio = ["dep:tokio"]
metrics = ["dep:dwbase-metrics"]

[dependencies]
dwbase-core = { path = "../dwbase-core" }
dwbase-metrics = { path = "../dwbase-metrics", optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1.40.0", optional = true, features = ["rt"], default-features = false }
time.workspace = true
parking_lot = "0.12.3"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["macros", "rt"], default-features = false }
