[package]
name = "dwbase-engine"
edition.workspace = true
license.workspace = true
version.workspace = true

description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
[features]
default = []
tokio = ["dep:tokio"]
metrics = ["dep:dwbase-metrics"]

[dependencies]
dwbase-core = { workspace = true }
dwbase-metrics = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true, features = ["rt"], default-features = false }
time.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"], default-features = false }
