[package]
name = "dwbase-metrics"
edition.workspace = true
license.workspace = true
version.workspace = true

description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
[features]
default = []

[dependencies]
metrics.workspace = true
tracing.workspace = true
