[package]
name = "dwbase-node"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = ["metrics"]
metrics = [
    "dwbase-engine/metrics",
    "dep:dwbase-metrics",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:metrics-exporter-prometheus",
]

[dependencies]
dwbase-core = { path = "../dwbase-core" }
dwbase-engine = { path = "../dwbase-engine" }
dwbase-storage-sled = { path = "../dwbase-storage-sled" }
dwbase-vector-hnsw = { path = "../dwbase-vector-hnsw" }
dwbase-stream-local = { path = "../dwbase-stream-local" }
dwbase-security = { path = "../dwbase-security" }
dwbase-embedder-dummy = { path = "../dwbase-embedder-dummy" }
dwbase-metrics = { path = "../dwbase-metrics", optional = true }
anyhow = "1.0.89"
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.7.5", features = ["macros", "tokio"] }
toml = "0.8.19"
thiserror.workspace = true
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true, features = ["fmt"] }
fs2 = "0.4.3"
metrics-exporter-prometheus = { version = "0.13.0", optional = true }
uuid = { version = "1.10.0", features = ["v4"] }
tempfile = { version = "3.12.0", optional = true }

[dev-dependencies]
tempfile = "3.12.0"
