[package]
name = "dwbase-node"
edition.workspace = true
license.workspace = true
version.workspace = true

description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
[features]
default = ["metrics"]
metrics = [
    "dwbase-engine/metrics",
    "dep:dwbase-metrics",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:metrics-exporter-prometheus",
]

[dependencies]
dwbase-core = { workspace = true }
dwbase-engine = { workspace = true }
dwbase-storage-sled = { workspace = true }
dwbase-vector-hnsw = { workspace = true }
dwbase-stream-local = { workspace = true }
dwbase-security = { workspace = true }
dwbase-embedder-dummy = { workspace = true }
dwbase-metrics = { workspace = true, optional = true }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
axum = { workspace = true, features = ["macros", "tokio"] }
toml.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true, features = ["fmt"] }
fs2.workspace = true
metrics-exporter-prometheus = { workspace = true, optional = true, default-features = true }
uuid = { workspace = true, features = ["v4"] }
tempfile = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
