[package]
name = "dwbase-storage-sled"
edition.workspace = true
license.workspace = true
version.workspace = true

description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
[features]
default = ["bincode"]
bincode = ["dep:bincode"]

[dependencies]
dwbase-core = { workspace = true }
dwbase-engine = { workspace = true }
sled.workspace = true
bincode = { workspace = true, optional = true }
thiserror.workspace = true
crc32fast.workspace = true
serde = { workspace = true, features = ["derive"] }
time.workspace = true
aes-gcm.workspace = true
rand.workspace = true
hex.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
