[package]
name = "dwbase-stream-local"
edition.workspace = true
license.workspace = true
version.workspace = true

description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
[dependencies]
dwbase-core = { workspace = true }
dwbase-engine = { workspace = true }
