[package]
name = "dwbase-swarm-nats"
edition.workspace = true
license.workspace = true
version.workspace = true

description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
[features]
default = ["mock"]
mock = []
nats = ["dep:async-nats", "dep:tokio", "dep:futures"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
time.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
anyhow.workspace = true
async-nats = { workspace = true, default-features = false, features = ["ring"], optional = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "sync"], optional = true }
futures = { workspace = true, optional = true }
dwbase-swarm = { workspace = true }
dwbase-engine = { workspace = true }
dwbase-core = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }
hex.workspace = true

[dev-dependencies]
tempfile.workspace = true
