[package]
name = "dwbase-swarm"
edition.workspace = true
license.workspace = true
version.workspace = true

description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
[features]
default = []
swarm = ["async-trait", "tokio"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
bincode.workspace = true
async-trait = { workspace = true, optional = true }
tokio = { workspace = true, features = ["net", "time", "sync"], optional = true }
dwbase-core = { workspace = true }
dwbase-engine = { workspace = true }
siphasher.workspace = true
time = { workspace = true }

[dev-dependencies]
async-trait.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "net", "sync"] }
