[package]
name = "dwbase-vector-hnsw"
edition.workspace = true
license.workspace = true
version.workspace = true

description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
[dependencies]
dwbase-core = { workspace = true }
dwbase-engine = { workspace = true }
hnsw_rs = { workspace = true }
serde.workspace = true
thiserror.workspace = true
num_cpus.workspace = true

[dev-dependencies]
serde_json.workspace = true
