[package]
name = "dwbase-wit-guest"
edition.workspace = true
license.workspace = true
version.workspace = true

description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
[dependencies]
serde = { workspace = true, features = ["derive"] }
wit-parser.workspace = true

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
