[package]
name = "dwbase-wit-host"
edition.workspace = true
license.workspace = true
version.workspace = true

description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
[dependencies]
dwbase-core = { workspace = true }
dwbase-engine = { workspace = true }
serde.workspace = true
thiserror.workspace = true
wit-parser.workspace = true

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
